# UC-MUX-EHO-KRM

./: CMakeLists.txt  enet_lwip.ld  lm3.specs
enet_lwip/: DSP.c  DSP.h  enet_lwip.c  fixedptc.h  lwipopts._h  lwipopts.h  startup_gcc.c  std_my.c  std_my.h  udp_srv.c  udp_srv.h
inc/: cr_project.xml  inc.sgxx  lm3s9b92.h
utils/: locator.c  locator.h  lwiplib.c  lwiplib.h  swupdate.c  swupdate.h  ustdlib.c  ustdlib.h
